# BigNumber

./: .gitignore  CMakeLists.txt  LICENSE
BigBits/: BigBits.cpp  BigBits.h
src/: BigBits.cpp  BigBits.h  big_number.cpp  big_number.h
tst/: big_bits_test.cpp  big_number_test.cpp
